# discreteNPIV

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  results_n100_K1000_18_ab2_3.5_123.pkl  results_n100_K3000_18_ab2_3.5_123.pkl  results_n100_K4000_18_ab2_3.5_123.pkl  results_n120_K1000.pkl  results_n120_K2000.pkl  results_n120_K3000.pkl  results_n240_K1000.pkl  results_n240_K2000.pkl  results_n240_K3000.pkl  results_n300_K2000_18_ab2_3.5_123.pkl  results_n300_K4000_18_ab2_3.5_123.pkl  results_n300_K500_18_ab2_3.5_123.pkl  results_n30_K1000_18_ab2_2.5_123.pkl  results_n30_K1000_18_ab2_3.5_123.pkl  results_n30_K1000_18_ab2_3_123.pkl  results_n30_K2000_18_22dot5_123.pkl  results_n30_K2000_18_ab2_2.5_123.pkl  results_n30_K2000_18_ab2_3_123.pkl  results_n30_K3000.pkl  results_n30_K3000_18_ab2_3.5_123.pkl  results_n30_K3000_18_ab2_3_123.pkl  results_n30_K4000.pkl  results_n30_K4000_18_ab2_2.5_123.pkl  results_n30_K500_18_22dot5_123.pkl  results_n30_K500_18_ab2_2.5_123.pkl  results_n30_K500_18_ab2_3.5_123_LOO.pkl  results_n60_K1000.pkl  results_n60_K1000_18_ab2_2.5_123.pkl  results_n60_K4000.pkl  results_n60_K500.pkl  run_sims_exp.ipynb
.ipynb_checkpoints/: LOOCV-checkpoint.ipynb
discreteNPIV/: solve_dual_riesz.py  solve_primal_structural.py
docs/: api_reference.md  experiment_encoding.md  index.html  long-term.html  long_term_surrogate_case_study.md  loo_jackknife.md  migration.md  npjive_validation.md  paper_notation_map.md  site.css  site.js
main-depreciated/: README.md
notebooks/: design_sims.ipynb  experiment.ipynb  experiment_final-Copy1.ipynb  speed.ipynb  (+4 more)
(+377 files in other folders)
